Update 'go-tynuflsk' component image to: quay.io/rhtap_qe/go-tynuflsk:ed22ad93d04d4b63d6d8431bc219b76734561de8@sha256:9cc158ec4d3e34dbf094de7e9951d70a564ad235039a3893dbc9f01d9125f7e3

--- a/components/go-tynuflsk/overlays/development/deployment-patch.yaml
+++ b/components/go-tynuflsk/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-tynuflsk
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-tynuflsk:ed22ad93d04d4b63d6d8431bc219b76734561de8@sha256:9cc158ec4d3e34dbf094de7e9951d70a564ad235039a3893dbc9f01d9125f7e3
+          name: container-image
